# SpeakFlow

./: .gitignore  Makefile  README.md  package-lock.json  pyproject.toml
apps/api/: Makefile  pyproject.toml
apps/api/app/: Makefile
apps/web/: cypress.config.ts  eslint.config.js  index.html  lint-staged.json  package-lock.json  package.json  tsconfig.json  vite.config.ts
apps/web/.husky/: pre-commit  pre-push
apps/web/app/: index.html  layout.tsx  main.tsx
apps/web/app/pages/auth/: AuthPage.tsx
apps/web/app/pages/main/: MainPage.tsx
apps/web/app/pages/notFoundPage/: NotFoundPage.tsx
apps/web/app/pages/summary_result/: SummarizingResultPage.tsx
apps/web/app/pages/transcription/: TranscriptionResultPage.tsx
apps/web/app/styles/: AuthPage.module.css  MainPage.module.css  app.module.css
apps/web/cypress/e2e/: smoke.cy.ts
apps/web/styles/: MainPage.module.css  NotFoundPage.module.css  SummarizingResultPage.module.css  TranscriptionResultPage.module.css  global.css
