[project]
name = "api"
version = "0.1.0"
description = "A simple web app for working with audio: upload a file, get a transcript, view it in the browser, and download it as a PDF. Built as a **university project** to explore modern web development and speech-to-text."
authors = [
    {name = "NAKS3DDRGHER",email = "maksbodnaruk0@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
